[project]
name = "project-03-web-chat-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "levipoiani95",email = "levipoiani95@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "openai (>=2.6.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "project_03_web_chat_bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
